[package]
name = "superior"
version = "0.1.0"
authors = ["Zachary Dovel <bitterepic@tuta.io>"]
description = "A library for rendering html"
license = "MIT"
repository = "https://github.com/bitterepic/superior"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.120"
web-sys = { version = "0.3.97", features = [
  "Window",
  "Document",
  "HtmlElement",
  "HtmlDivElement",
  "Text",
] }
